更正冒泡排序错误

--- a/animation-simulation/数据结构和算法/冒泡排序.md
+++ b/animation-simulation/数据结构和算法/冒泡排序.md
@@ -38,7 +38,7 @@
 
 第一次排序之后，所有的职工按照**红豆数**从少到多有序。
 
-第二次排序中，我们使用**稳定的排序算法**，所以经过第二次排序之后，年终奖相同的职工，仍然保持着红豆的有序（想对位置不变），红豆仍是从小到大排序。我们使用稳定的排序算法，只需要两次排序即可。
+第二次排序中，我们使用**稳定的排序算法**，所以经过第二次排序之后，年终奖相同的职工，仍然保持着红豆的有序（相对位置不变），红豆仍是从小到大排序。我们使用稳定的排序算法，只需要两次排序即可。
 
 稳定排序可以让第一个关键字排序的结果服务于第二个关键字排序中数值相等的那些数。
 
